Fixed spacing issues in "Vehicle" tab

--- a/webclient/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/webclient/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -1,5 +1,5 @@
 .controlPanel {
-  padding:10px 10px;
+  padding: 15px 0;
   width: 100%;
 }
 
@@ -10,8 +10,6 @@
 .error {
   color: red;
   margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .fieldLabel {
